[package]
name = "puchiprop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["dep:puchiprop_std"]

[dependencies]
puchiprop_macro = { path = "../puchiprop_macro" }
puchiprop_core = { path = "../puchiprop_core" }
puchiprop_std = { path = "../puchiprop_std", optional = true }
rand = { workspace = true }
