[package]
name = "puchiprop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cases"]
cases = ["dep:puchiprop_cases"]

[dependencies]
puchiprop_macro = { path = "../puchiprop_macro" }
puchiprop_core = { path = "../puchiprop_core" }
puchiprop_cases = { path = "../puchiprop_cases", optional = true }
rand = { workspace = true }
