[package]
name = "puchiprop"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cases"]
cases = ["dep:puchiprop_cases"]

[dependencies]
puchiprop_macro = { workspace = true }
puchiprop_core = { workspace = true }
puchiprop_cases = { workspace = true, optional = true }
rand = { workspace = true }
