[package]
name = "puchiprop_macro_impl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full", "extra-traits"] }

[dev-dependencies]
prettyplease = "0.2.16"
